new modules installed

--- a/src/composer.json
+++ b/src/composer.json
@@ -16,13 +16,22 @@
     ],
     "require": {
         "composer/installers": "^1.2",
+        "drupal/address": "^1.8",
+        "drupal/admin_toolbar": "^2.3",
         "drupal/bootstrap": "^3.23",
         "drupal/bootstrap_mint": "^5.0",
+        "drupal/commerce": "^2.20",
+        "drupal/commerce_paypal": "^1.0@beta",
         "drupal/config_split": "^1.4",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/core-vendor-hardening": "^8.8",
+        "drupal/entity": "^1.1",
+        "drupal/entity_reference_revisions": "^1.8",
+        "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/profile": "^1.1",
+        "drupal/state_machine": "^1.0",
         "drush/drush": "^10.3"
     },
     "conflict": {
